# gitprojects

./: .bashrc  LTE_modem.cfg  TestEquipmentShell.ino  pathlister.sh  pff-install-helper.sh  programList.txt  ws-setup.sh
GPS_support/: gps_usb.rules  gpsd.default  gpsd.service
Notes/: Blitz Meeting.md  BroadCom_3-15  Broadcom-live-demo.md  Cross_function_comms(3-5-18).md  Software_Jan21.txt  Software_project_Feb1.md  fadecandy-rework  softwarePlanning_7-24.txt  wake-sleep
TESC_read/: readFeedback.py  simple.txt
VL53_project/: range_results.csv  run_vl53_ROS_and_test.sh  vl53_cold_results.csv  vl53_data_to_csv.py  vl53_thermal_results.csv
arduino_template/: Makefile  build_and_upload.sh
bit_parser/: parsing.txt  range_parser.cpp  ranger_parse
cpu_load_test/: Makefile  load_test.c
device_finder/: device_test.sh
dfu-pff/: dfu-suffix  dfu-util  dfu-wrap-load.sh
ftdi_switch_full/: CMakeLists.txt  README.md  package.xml
ftdi_switch_simple/: Makefile  hub_disconnect.plist  hub_disconnect.rules  install-usbdisconnect.sh  lsusb.txt  my_config.cfg  usbSwitch.cpp
gpio/: .sysfs_blink.c.swp  Makefile  gpio_toggle.py  kernel_blink.c  sysfs_blink.c
gpio_chip_test/: Makefile  gpio_chip_test.cpp
gps/: gps_test.py
mag_posit_encoder/: mag_enc_driver.rules
master_make/: hellomake
microchip_usb_hub/: Makefile  hub_ctrl.cpp  hub_ctrl.h
oldHW/: beckvold-hw1.asm  hw2-insertion.asm  hw5.txt
parity_check/: a.out  parity_check.cpp
pff_embedded/: CMakeLists.txt  README.md  package.xml
pff_embedded/config/: embedded.yaml
pff_embedded/include/: hub_ctrl.h  timestamp.h
pff_embedded/launch/: embedded_interface.launch  embedded_test.launch  embedded_timestamp_test.launch
pff_embedded/msg/: ADCInputs.msg  EmbeddedStatus.msg  EmbeddedTimestamp.msg  IOBoardStatus.msg  PowerBoardStatus.msg  devGpio.msg  dfu.msg  rangefinder.msg  tempSensors.msg
pff_embedded/scripts/: dfu-wrap-load.sh  load_binary.sh  setup_target_DFU
pff_embedded/scripts/usb_hub/: Makefile  descriptors.txt  hub_ctrl.cpp  hub_ctrl.h
pff_embedded/src/: hub_ctrl.cpp  timestamp.cpp
scripts/: b-catkin_make_pkg  b-gita  b-resetPower.sh  b-takeNotes  b-unlock-latch  install-git.sh  setwindow  (+6 more)
(+104 files in other folders)
