<?xml version="1.0"?>
<package>
    <name>pff_embedded</name>
    <version>0.0.0</version>
    <description>The pff_embedded package</description>

    <maintainer email="ben.beckvold@piaggiofastforward.com">Ben Beckvold</maintainer>

    <license>TODO</license>

    <url type="website">http://www.piaggiofastforward.com</url>
    <url type="repository">https://github.com/piaggiofastforward/pff-ros-ws</url>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>rosserial_python</build_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>rosserial_python</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>roscpp</run_depend>

    <export>
    </export>
</package>
